# sdl2-platformer-demo

./: .clang-format  CMakeLists.txt  README.md  dependencies.cmake  install.sh
dependencies/: sdl2-image.cmake
include/: Entity.h  Position.h  RenderWindow.h  Utils.h
resources/: README.md
src/: Entity.cpp  Position.cpp  RenderWindow.cpp  main.cpp
